DevTools: update transfer mode in Tracing.start when using start-up tracing

BUG=632155

This allows clients to issue Tracing.start when tracing is already running, but only if it is runnins as a result of start-up tracing being active.
When this is the case, the only action we perform is updating the transfer mode, as Tracing.start is currently the only way to specify it.

Review-Url: https://codereview.chromium.org/2180423004
Cr-Commit-Position: refs/heads/master@{#408301}

Former-commit-id: e886e3aeb93dd1786d6c3323a2cbd2aa8d99b407